@@ -1,9 +1,9 @@
-FROM gradle:6.9.4-jdk11 AS builder
+FROM gradle:9.3.1-jdk25 AS builder
 USER root
 COPY . .
 RUN gradle --no-daemon build
 
-FROM gcr.io/distroless/java:11
-ENV JAVA_TOOL_OPTIONS=-XX:+ExitOnOutOfMemoryError
+FROM gcr.io/distroless/java25
+ENV JAVA_TOOL_OPTIONS="-XX:+ExitOnOutOfMemoryError --sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED"
 COPY --from=builder /home/gradle/build/libs/fint-graphql*.jar /data/fint-graphql.jar
 CMD ["/data/fint-graphql.jar"]
